infra/security/policy/templates/block-user.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sblockuser
spec:
  crd:
    spec:
      names:
        kind: K8sBlockUser
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblockuser
        
        violation[{"msg": msg}] {
          input.review.object.spec.securityContext.runAsUser == 0
          msg := "Running as root user (uid=0) is forbidden."
        }
        
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.runAsUser == 0
          msg := sprintf("Container %v is running as root user (uid=0).", [container.name])
        }
