infra/security/policy/templates/require-probe.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequireprobe
spec:
  crd:
    spec:
      names:
        kind: K8sRequireProbe
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequireprobe
        
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not container.livenessProbe
          msg := sprintf("Container %v must have a livenessProbe defined.", [container.name])
        }
