infra/security/policy/templates/unique-ingress.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8suniqueingresshost
spec:
  crd:
    spec:
      names:
        kind: K8sUniqueIngressHost
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8suniqueingresshost
        
        violation[{"msg": msg}] {
          input.review.kind.kind == "Ingress"
          host := input.review.object.spec.rules[_].host
          other := data.inventory.namespace[other_ns][other_kind][other_name]
          other_kind == "Ingress"
          other.spec.rules[_].host == host
          [other_ns, other_name] != [input.review.object.metadata.namespace, input.review.object.metadata.name]
          msg := sprintf("Ingress host conflict: %v is already used in namespace %v", [host, other_ns])
        }
